Added CushyCms to content for external editing
did not add to "submit" sections since content is finalized from 3rd
party

--- a/app/about.html
+++ b/app/about.html
@@ -36,7 +36,7 @@
 		<div class="meta row">
 			<div class="four columns offset-by-eight">
 				<div class="meta-content">
-					<p>E: info@globalhealth.com | T: +01.415.206.4261</p>
+					<p class="cushycms" title="contact info">E: info@globalhealth.com | T: +01.415.206.4261</p>
 				</div>
 			</div>
 		</div>
@@ -99,7 +99,7 @@
 						</div>
 					</div>
 					<div class="three columns">
-						three columns content goes here
+						<p class="cushycms" title="image text">three columns content goes here</p>
 					</div>
 				</div>
 			</div>
