--- a/app/index.html
+++ b/app/index.html
@@ -36,7 +36,7 @@
 	<div class="meta row">
 		<div class="four columns offset-by-eight">
 			<div class="meta-content">
-				<p>E: info@globalhealth.com | T: +01.415.206.4261</p>
+				<p class="cushycms">E: info@globalhealth.com | T: +01.415.206.4261</p>
 			</div>
 		</div>
 	</div>
@@ -75,14 +75,14 @@
 				<!-- <div class="vert-pad"></div> -->
 				<p class="title">Global Health<br/>Film Festival
 				</p>
-				<p class="home-text"><span class="strong">'The Right to Heal' Premier</span>
+				<p class="home-text" class="cushycms" title="Homepage Text" ><span class="strong">'The Right to Heal' Premier</span>
 				<br>
 				Saturday July 16th, 2013
 				<br>
 				Doors open 7pm
 				<br>
 				</p>
-				<p class="home-text pad">Movie @8pm followed by Panel Q+A and performance by XX 
+				<p class="home-text pad" class="cushycms" title="Details">Movie @8pm followed by Panel Q+A and performance by XX 
 				</p>
 			</div>
 
