--- a/app/schedule.html
+++ b/app/schedule.html
@@ -18,25 +18,25 @@
 		<script src="javascripts/modernizr.foundation.js"></script>
 </head>
 <body>
-	<div class="row">
-		<div class="twelve columns">
-			<div id="social-icons">
+		<div class="row">
+			<div class="twelve columns">
+				<div id="social-icons">
 					<a href="https://www.facebook.com/pages/The-Right-To-Heal/133752193461055" target="_blank">
-							<img src="./images/facebook2.png" width="30" height="30" alt="Facebook"/>
+						<img src="./images/facebook2.png" width="30" height="30" alt="Facebook"/>
 					</a>
 					<a href="https://twitter.com/therighttoheal" target="_blank">
-							<img src="./images/twitter2.png" width="30" height="30" alt="Twitter"/>
+						<img src="./images/twitter2.png" width="30" height="30" alt="Twitter"/>
 					</a>
 					<a href="http://instagram.com/therighttoheal" target="_blank">
-							<img src="./images/instagram2.png" width="30" height="30" alt="Instagram"/>
+						<img src="./images/instagram2.png" width="30" height="30" alt="Instagram"/>
 					</a>
+				</div>
 			</div>
 		</div>
-	</div>
 		<div class="meta row">
 			<div class="four columns offset-by-eight">
 				<div class="meta-content">
-					<p>E: info@globalhealth.com | T: +01.415.206.4261</p>
+					<p class="cushycms" title="Header Contact">E: info@globalhealth.com | T: +01.415.206.4261</p>
 				</div>
 			</div>
 		</div>
@@ -44,8 +44,7 @@
 		<div class="header row">
 			<div class="five columns">
 				<div class="logo-container">
-				<img src="images/ghff_logo_black.png">
-				</div>
+					<img src="images/ghff_logo_black.png"></div>
 			</div>
 			<div class="seven columns">
 				<ul class="main-nav nav">
@@ -69,116 +68,137 @@
 				<div class="row">
 					<div class="twelve columns schedule">
 						<div>
-							<p class="schedule">Saturday July 6, 2013</p>
-							<p class="schedule">Location TBD</p>
-							<p class="schedule">
-								7pm-10pm film premier and Q+A, followed by a live performance from<a href="put band in here"> XX</a>
+							<p class="schedule cushycms" title="Date">Saturday July 6, 2013</p>
+							<p class="schedule cushycms" title="Location">Location TBD</p>
+							<p class="schedule cushycms" title="Time">
+								7pm-10pm film premier and Q+A, followed by a live performance from
+								<a href="put band in here">XX</a>
 							</p>
 							<p class="schedule">
-								<a href="https://www.facebook.com/events/458415670892007/" target="_blank">
-									RSVP on Facebook here</a>
+								<a href="https://www.facebook.com/events/458415670892007/" target="_blank">RSVP on Facebook here</a>
 							</p>
 						</div>
 					</div>
 				</div>
-				<div class="pad">
-				</div>
+				<div class="pad"></div>
 				<div class="row">
-				<div class="twelve columns top-pad">
-					<h4>Feature Film</h4>
-				</div>
-				</div>
-				<div class="row">
-					<div class= "three columns image">
-						<img src="http://placehold.it/200x150&text=image+one+here"></div>
-					<div class="nine columns">
-						<p class="strong long-text">Title of Film (time)</p>
-						<p class="long-text">
-							This is the description of the film.Lorem ipsum dolor sit amet, graeco dissentiet est ea, et ius atqui oporteat. Eros cibo melius cu mel. Cu illud ceteros liberavisse pri. In mnesarchum quaerendum sea, vis natum quaeque salutandi et. Eum adhuc luptatum scriptorem id, an cum wisi tantas. Ubique docendi sensibus quo ex, usu in minim atomorum quaerendum, has id possit eripuit.
-						</p>
+					<div class="twelve columns top-pad">
+						<h4>Feature Film</h4>
 					</div>
 				</div>
-				<div class="pad">
-				</div>
 				<div class="row">
-				<div class="twelve columns top-pad">
-					<h5>Short Films</h5>
+					<div class="three columns image">
+						<div class="cushycms" title="Feature Film Image">
+							<img src="http://placehold.it/200x150&text=image+one+here">
+						</div>
+					</div>
+					<div class="nine columns">
+						<div class="cushycms" title="Feature Film text">
+							<p class="strong long-text" >Title of Film (time)</p>
+							<p class="long-text">
+								This is the description of the film.Lorem ipsum dolor sit amet, graeco dissentiet est ea, et ius atqui oporteat. Eros cibo melius cu mel. Cu illud ceteros liberavisse pri. In mnesarchum quaerendum sea, vis natum quaeque salutandi et. Eum adhuc luptatum scriptorem id, an cum wisi tantas. Ubique docendi sensibus quo ex, usu in minim atomorum quaerendum, has id possit eripuit.
+							</p>
+						</div>
+					</div>
 				</div>
+				<div class="pad"></div>
+				<div class="row">
+					<div class="twelve columns top-pad">
+						<h5>Short Films</h5>
+					</div>
 				</div>
 				<div class="row">
 					<div class="three columns">
-						<div class="partner-image">
-							<img src="http://placehold.it/200x150&text=image+two+here">
+						<div class="cushycms" title="short film 1 200x150">
+							<div class="partner-image">
+								<img class="" src="http://placehold.it/200x150&text=image+two+here">
+							</div>
 						</div>
 					</div>
 					<div class="nine columns">
-						<div class="partner-text">
-							<p class="strong long-text">Title of Film (time)</p>
-							<p class="long-text">
-								This is the description of film 1.Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat. Duis aute irure dolor in reprehenderit in voluptate velit esse cillum dolore eu fugiat nulla pariatur.
-							</p>
+						<div class="cushycms" title="text short film 1 ">
+							<div class="partner-text">
+								<p class="strong long-text">Title of Film (time)</p>
+								<p class="long-text">
+									This is the description of film 1.Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat. Duis aute irure dolor in reprehenderit in voluptate velit esse cillum dolore eu fugiat nulla pariatur.
+								</p>
+							</div>
 						</div>
 					</div>
 				</div>
 				<div class="row vert-pad">
 					<div class="three columns">
-						<div class="partner-image">
-							<img src="http://placehold.it/200x150&text=image+two+here"></div>
+						<div class="cushycms" title="short film 2 200x150">
+							<div class="partner-image">
+								<img class=""  src="http://placehold.it/200x150&text=image+two+here">
+							</div>
+						</div>
 					</div>
 					<div class="nine columns">
-						<div class="partner-text">
-							<p class="strong long-text">Title of Film (time)</p>
-							<p class="long-text">
-								This is the description of film 2.Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat. Duis aute irure dolor in reprehenderit in voluptate velit esse cillum dolore eu fugiat nulla pariatur.
-							</p>
+						<div class="cushycms" title="short film 2 text">
+							<div class="partner-text">
+								<p class="strong long-text">Title of Film (time)</p>
+								<p class="long-text">
+									This is the description of film 2.Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat. Duis aute irure dolor in reprehenderit in voluptate velit esse cillum dolore eu fugiat nulla pariatur.
+								</p>
+							</div>
 						</div>
 					</div>
 				</div>
 				<div class="row">
 					<div class="three columns">
-						<div class="partner-image">
-							<img src="http://placehold.it/200x150&text=image+two+here">
+						<div class="cushycms" title="short film 3 200x150">
+							<div class="partner-image">
+								<img class="" src="http://placehold.it/200x150&text=image+two+here">
+							</div>
 						</div>
 					</div>
 					<div class="nine columns">
-						<div class="partner-text">
-							<p class="strong long-text">Title of Film (time)</p>
-							<p class="long-text">
-								This is the description of film 3.Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat. Duis aute irure dolor in reprehenderit in voluptate velit esse cillum dolore eu fugiat nulla pariatur.
-							</p>
+						<div class="cushycms" title="short film 3 text">
+							<div class="partner-text">
+								<p class="strong long-text">Title of Film (time)</p>
+								<p class="long-text">
+									This is the description of film 3.Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat. Duis aute irure dolor in reprehenderit in voluptate velit esse cillum dolore eu fugiat nulla pariatur.
+								</p>
+							</div>
 						</div>
 					</div>
 				</div>
-				<div class="pad">
-				</div>
+				<div class="pad"></div>
 				<div class="row">
-					<div class="twelve columns top-pad">
+					<div class="twelve columns top-pad`">
 						<h5>Panel of Experts</h5>
 					</div>
 				</div>
-					<div class="row">
-						<div class="three columns">
+				<div class="row">
+					<div class="three columns">
+						<div class="cushycms" title="expert 1 200x150">
 							<div class="partner-image">
 								<img src="http://placehold.it/200x150&text=image+two+here">
 							</div>
 						</div>
-						<div class="nine columns">
+					</div>
+					<div class="nine columns">
+						<div class="cushycms" title="expert 1 text">
 							<div class="partner-text">
-								<p class="strong long-text">Name
-								</p>
+								<p class="strong long-text">Name</p>
 								<p class="long-text">
 									This is the description of expert 1.Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat. Duis aute irure dolor in reprehenderit in voluptate velit esse cillum dolore eu fugiat nulla pariatur.
 								</p>
 							</div>
 						</div>
 					</div>
-					<div class="row vert-pad">
-						<div class="three columns">
+				</div>
+				<div class="row vert-pad">
+					<div class="three columns">
+						<div class="cushycms" title="expert 2 200x150">
 							<div class="partner-image">
 								<img src="http://placehold.it/200x150&text=image+two+here">
 							</div>
 						</div>
-						<div class="nine columns">
+					</div>
+					<div class="nine columns">
+						<div class="cushycms" title="expert 2 text">
 							<div class="partner-text">
 								<p class="strong long-text">Name</p>
 								<p class="long-text">
@@ -187,13 +207,17 @@
 							</div>
 						</div>
 					</div>
-						<div class="row">
-						<div class="three columns">
+				</div>
+				<div class="row">
+					<div class="three columns">
+						<div class="cushycms" title="expert 3 200x150">
 							<div class="partner-image">
 								<img src="http://placehold.it/200x150&text=image+two+here">
 							</div>
 						</div>
-						<div class="nine columns">
+					</div>
+					<div class="nine columns">
+						<div class="cushycms" title="expert 3 text">
 							<div class="partner-text">
 								<p class="strong long-text">Name</p>
 								<p class="long-text">
@@ -202,55 +226,52 @@
 							</div>
 						</div>
 					</div>
-					<div class="pad">
-					</div>
+				</div>
+				<div class="pad"></div>
 			</div>
 		</div>
 
 		<div class="footer row">
-		<div class="four columns">
-			<p class="strong">Locate Us:</p>
-			<p>
-				IGOT Global Health Film Festival
-				<br>	
-				2550 23rd Street
-				<br>	
-				Building 9, 2nd Floor
-				<br>	
-				San Francisco, CA 94110
-			</p>
-		</div>
-		<div class="four columns">
-			<p class="strong">Show the love:</p>
-			<p>info@globalhealth.com</p>
-			<p>
-				<a href="https://www.facebook.com/pages/The-Right-To-Heal/133752193461055">RSVP to the event</a>
-			</p>
-			<p>
-				<a href="https://www.change.org/petitions/congress-the-house-of-representatives-provide-basic-cost-effective-surgical-care-to-people-in-developing-worlds?" target="_blank">Sign the petition</a>
-			</p>
-			<p>
-				<a href="https://docs.google.com/forms/d/12FSZOiDSsSCPTXuq11Jjxkp9dNozNjuwHWkG1YHQ5UY/viewform" target="_blank">Join our mailing list</a>
-			</p>
-			<p>
-				<a href="https://docs.google.com/forms/d/1S2gHF3fMmlGTIOgRogL9raWdZubqyUNSwYppbELZEA8/viewform" target="_blank">Volunteer</a>
-			</p>
+			<div class="four columns">
+				<p class="strong">Locate Us:</p>
+				<p>
+					IGOT Global Health Film Festival
+					<br>
+					2550 23rd Street
+					<br>
+					Building 9, 2nd Floor
+					<br>San Francisco, CA 94110</p>
+			</div>
+			<div class="four columns">
+				<p class="strong">Show the love:</p>
+				<p>info@globalhealth.com</p>
+				<p>
+					<a href="https://www.facebook.com/pages/The-Right-To-Heal/133752193461055">RSVP to the event</a>
+				</p>
+				<p>
+					<a href="https://www.change.org/petitions/congress-the-house-of-representatives-provide-basic-cost-effective-surgical-care-to-people-in-developing-worlds?" target="_blank">Sign the petition</a>
+				</p>
+				<p>
+					<a href="https://docs.google.com/forms/d/12FSZOiDSsSCPTXuq11Jjxkp9dNozNjuwHWkG1YHQ5UY/viewform" target="_blank">Join our mailing list</a>
+				</p>
+				<p>
+					<a href="https://docs.google.com/forms/d/1S2gHF3fMmlGTIOgRogL9raWdZubqyUNSwYppbELZEA8/viewform" target="_blank">Volunteer</a>
+				</p>
 
+			</div>
+			<div class="four columns">
+				<p class="strong">Social Streams:</p>
+				<p>
+					<a href="https://www.facebook.com/pages/The-Right-To-Heal/133752193461055" target="_blank">Facebook</a>
+				</p>
+				<p>
+					<a href="https://twitter.com/therighttoheal" target="_blank">Twitter</a>
+				</p>
+				<p>
+					<a href="http://instagram.com/therighttoheal" target="_blank">Instagram</a>
+				</p>
+			</div>
 		</div>
-		<div class="four columns">
-			<p class="strong">Social Streams:</p>
-			<p>
-				<a href="https://www.facebook.com/pages/The-Right-To-Heal/133752193461055" target="_blank">Facebook</a>
-			</p>
-			<p>
-				<a href="https://twitter.com/therighttoheal" target="_blank">Twitter</a>
-			</p>
-			<p>
-				<a href="http://instagram.com/therighttoheal" target="_blank">Instagram</a>
-			</p>
-		</div>
-	</div>
-		
 
 		<script src="javascripts/jquery.js"></script>
 		<script src="javascripts/foundation.min.js"></script>
