--- a/app/who.html
+++ b/app/who.html
@@ -17,25 +17,25 @@
 		<script src="javascripts/modernizr.foundation.js"></script>
 </head>
 <body>
-	<div class="row">
-		<div class="twelve columns">
-			<div id="social-icons">
+		<div class="row">
+			<div class="twelve columns">
+				<div id="social-icons">
 					<a href="https://www.facebook.com/pages/The-Right-To-Heal/133752193461055" target="_blank">
-							<img src="./images/facebook2.png" width="30" height="30" alt="Facebook"/>
+						<img src="./images/facebook2.png" width="30" height="30" alt="Facebook"/>
 					</a>
 					<a href="https://twitter.com/therighttoheal" target="_blank">
-							<img src="./images/twitter2.png" width="30" height="30" alt="Twitter"/>
+						<img src="./images/twitter2.png" width="30" height="30" alt="Twitter"/>
 					</a>
 					<a href="http://instagram.com/therighttoheal" target="_blank">
-							<img src="./images/instagram2.png" width="30" height="30" alt="Instagram"/>
+						<img src="./images/instagram2.png" width="30" height="30" alt="Instagram"/>
 					</a>
+				</div>
 			</div>
 		</div>
-	</div>
 		<div class="meta row">
 			<div class="four columns offset-by-eight">
 				<div class="meta-content">
-					<p>E: info@globalhealth.com | T: +01.415.206.4261</p>
+					<p class="cushycms">E: info@globalhealth.com | T: +01.415.206.4261</p>
 				</div>
 			</div>
 		</div>
@@ -43,8 +43,7 @@
 		<div class="header row">
 			<div class="five columns">
 				<div class="logo-container">
-					<img src="images/ghff_logo_black.png">
-				</div>
+					<img src="images/ghff_logo_black.png"></div>
 			</div>
 			<div class="seven columns">
 				<ul class="nav main-nav">
@@ -88,67 +87,86 @@
 				</div>
 				<div class="row">
 					<div class="twelve columns">
-						<p class="long-text pad">
-						The Global Health Film Festival (GHFF) is hosted by the Institute for Global Orthopedics and Traumatology in collaboration with__________. Our team is comprised of x y and z.
-						</p>
-					</div>
-				</div>
-				<div class="row vert-pad">
-					<div class="three columns">
-						<div class="partner-image">
-							<img src="http://placehold.it/200x150&text=image+two+here"></div>
-					</div>
-					<div class="nine columns">
-						<div class="partner-text">
-							<p class="name">Amber Caldwell</p>
+						<div class="cushycms" title="description">
 							<p class="long-text pad">
-								This is the description of Amber.Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat. Duis aute irure dolor in reprehenderit in voluptate velit esse cillum dolore eu fugiat nulla pariatur.
-							</p>
-						</div>
-					</div>
-				</div>
-				<div class="row">
-					<div class="three columns">
-						<div class="partner-image">
-							<img src="http://placehold.it/200x150&text=image+two+here"></div>
-					</div>
-					<div class="nine columns">
-						<div class="partner-text">
-							<p class="name">Jaymie Henry-Ang:</p>
-							<p class="long-text pad">
-								This is the description of partner Jaymie.Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat. Duis aute irure dolor in reprehenderit in voluptate velit esse cillum dolore eu fugiat nulla pariatur.
+								The Global Health Film Festival (GHFF) is hosted by the Institute for Global Orthopedics and Traumatology in collaboration with__________. Our team is comprised of x y and z.
 							</p>
 						</div>
 					</div>
 				</div>
 				<div class="row vert-pad">
 					<div class="three columns">
-						<div class="partner-image">
-							<img src="http://placehold.it/200x150&text=image+two+here">
+						<div class="cushycms" title="image 1 200x150">
+							<div class="partner-image">
+								<img src="http://placehold.it/200x150&text=image+two+here">
+							</div>
 						</div>
 					</div>
 					<div class="nine columns">
-						<div class="partner-text">
-							<p class="name">Andrew Pedkte</p>
-							<p class="long-text pad">
-								This is the description of partner Andrew.Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat. Duis aute irure dolor in reprehenderit in voluptate velit esse cillum dolore eu fugiat nulla pariatur.
-							</p>
+						<div class="cushycms" title="text 1">
+							<div class="partner-text">
+								<p class="name">Amber Caldwell</p>
+								<p class="long-text pad">
+									This is the description of Amber.Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat. Duis aute irure dolor in reprehenderit in voluptate velit esse cillum dolore eu fugiat nulla pariatur.
+								</p>
+							</div>
 						</div>
 					</div>
 				</div>
 				<div class="row">
 					<div class="three columns">
-						<div class="partner-image">
-							<img src="http://placehold.it/200x150&text=image+two+here">
+						<div class="cushycms" title="image 2 200x150">
+							<div class="partner-image">
+								<img src="http://placehold.it/200x150&text=image+two+here">
+							</div>
 						</div>
 					</div>
 					<div class="nine columns">
-						<div class="partner-text">
-							<p class="name">Stephanie Tomasky
-							</p>
-							<p class="long-text pad">
-								This is the description of partner Stephanie.Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat. Duis aute irure dolor in reprehenderit in voluptate velit esse cillum dolore eu fugiat nulla pariatur.
-							</p>
+						<div class="cushycms" title="text 2">
+							<div class="partner-text">
+								<p class="name">Jaymie Henry-Ang:</p>
+								<p class="long-text pad">
+									This is the description of partner Jaymie.Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat. Duis aute irure dolor in reprehenderit in voluptate velit esse cillum dolore eu fugiat nulla pariatur.
+								</p>
+							</div>
+						</div>
+					</div>
+				</div>
+				<div class="row vert-pad">
+					<div class="three columns">
+						<div class="cushycms" title="image 3 200x150">
+							<div class="partner-image">
+								<img src="http://placehold.it/200x150&text=image+two+here">
+							</div>
+						</div>
+					</div>
+					<div class="nine columns">
+						<div class="cushycms" title="text 3">
+							<div class="partner-text">
+								<p class="name">Andrew Pedkte</p>
+								<p class="long-text pad">
+									This is the description of partner Andrew.Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat. Duis aute irure dolor in reprehenderit in voluptate velit esse cillum dolore eu fugiat nulla pariatur.
+								</p>
+							</div>
+						</div>
+					</div>
+				</div>
+				<div class="row">
+					<div class="three columns">
+						<div class="cushycms" title="image 4 200x150">
+							<div class="partner-image">
+								<img src="http://placehold.it/200x150&text=image+two+here">
+							</div>
+						</div>
+					</div>
+					<div class="nine columns">
+						<div class="cushycms" title="text 4">
+							<div class="partner-text">
+								<p class="name">Stephanie Tomasky</p>
+								<p class="long-text pad">
+									This is the description of partner Stephanie.Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat. Duis aute irure dolor in reprehenderit in voluptate velit esse cillum dolore eu fugiat nulla pariatur.
+								</p>
+							</div>
 						</div>
 					</div>
 				</div>
@@ -156,48 +174,46 @@
 		</div>
 
 		<div class="footer row">
-		<div class="four columns">
-			<p class="strong">Locate Us:</p>
-			<p>
-				IGOT Global Health Film Festival
-				<br>	
-				2550 23rd Street
-				<br>	
-				Building 9, 2nd Floor
-				<br>	
-				San Francisco, CA 94110
-			</p>
-		</div>
-		<div class="four columns">
-			<p class="strong">Show the love:</p>
-			<p>info@globalhealth.com</p>
-			<p>
-				<a href="https://www.facebook.com/pages/The-Right-To-Heal/133752193461055">RSVP to the event</a>
-			</p>
-			<p>
-				<a href="https://www.change.org/petitions/congress-the-house-of-representatives-provide-basic-cost-effective-surgical-care-to-people-in-developing-worlds?" target="_blank">Sign the petition</a>
-			</p>
-			<p>
-				<a href="https://docs.google.com/forms/d/12FSZOiDSsSCPTXuq11Jjxkp9dNozNjuwHWkG1YHQ5UY/viewform" target="_blank">Join our mailing list</a>
-			</p>
-			<p>
-				<a href="https://docs.google.com/forms/d/1S2gHF3fMmlGTIOgRogL9raWdZubqyUNSwYppbELZEA8/viewform" target="_blank">Volunteer</a>
-			</p>
+			<div class="four columns">
+				<p class="strong">Locate Us:</p>
+				<p>
+					IGOT Global Health Film Festival
+					<br>
+					2550 23rd Street
+					<br>
+					Building 9, 2nd Floor
+					<br>San Francisco, CA 94110</p>
+			</div>
+			<div class="four columns">
+				<p class="strong">Show the love:</p>
+				<p>info@globalhealth.com</p>
+				<p>
+					<a href="https://www.facebook.com/pages/The-Right-To-Heal/133752193461055">RSVP to the event</a>
+				</p>
+				<p>
+					<a href="https://www.change.org/petitions/congress-the-house-of-representatives-provide-basic-cost-effective-surgical-care-to-people-in-developing-worlds?" target="_blank">Sign the petition</a>
+				</p>
+				<p>
+					<a href="https://docs.google.com/forms/d/12FSZOiDSsSCPTXuq11Jjxkp9dNozNjuwHWkG1YHQ5UY/viewform" target="_blank">Join our mailing list</a>
+				</p>
+				<p>
+					<a href="https://docs.google.com/forms/d/1S2gHF3fMmlGTIOgRogL9raWdZubqyUNSwYppbELZEA8/viewform" target="_blank">Volunteer</a>
+				</p>
 
+			</div>
+			<div class="four columns">
+				<p class="strong">Social Streams:</p>
+				<p>
+					<a href="https://www.facebook.com/pages/The-Right-To-Heal/133752193461055" target="_blank">Facebook</a>
+				</p>
+				<p>
+					<a href="https://twitter.com/therighttoheal" target="_blank">Twitter</a>
+				</p>
+				<p>
+					<a href="http://instagram.com/therighttoheal" target="_blank">Instagram</a>
+				</p>
+			</div>
 		</div>
-		<div class="four columns">
-			<p class="strong">Social Streams:</p>
-			<p>
-				<a href="https://www.facebook.com/pages/The-Right-To-Heal/133752193461055" target="_blank">Facebook</a>
-			</p>
-			<p>
-				<a href="https://twitter.com/therighttoheal" target="_blank">Twitter</a>
-			</p>
-			<p>
-				<a href="http://instagram.com/therighttoheal" target="_blank">Instagram</a>
-			</p>
-		</div>
-	</div>
 
 		<script src="javascripts/jquery.js"></script>
 		<script src="javascripts/foundation.min.js"></script>
