--- a/app/why.html
+++ b/app/why.html
@@ -17,25 +17,25 @@
 		<script src="javascripts/modernizr.foundation.js"></script>
 </head>
 <body>
-	<div class="row">
-		<div class="twelve columns">
-			<div id="social-icons">
+		<div class="row">
+			<div class="twelve columns">
+				<div id="social-icons">
 					<a href="https://www.facebook.com/pages/The-Right-To-Heal/133752193461055" target="_blank">
-							<img src="./images/facebook2.png" width="30" height="30" alt="Facebook"/>
+						<img src="./images/facebook2.png" width="30" height="30" alt="Facebook"/>
 					</a>
 					<a href="https://twitter.com/therighttoheal" target="_blank">
-							<img src="./images/twitter2.png" width="30" height="30" alt="Twitter"/>
+						<img src="./images/twitter2.png" width="30" height="30" alt="Twitter"/>
 					</a>
 					<a href="http://instagram.com/therighttoheal" target="_blank">
-							<img src="./images/instagram2.png" width="30" height="30" alt="Instagram"/>
+						<img src="./images/instagram2.png" width="30" height="30" alt="Instagram"/>
 					</a>
+				</div>
 			</div>
 		</div>
-	</div>
 		<div class="meta row">
 			<div class="four columns offset-by-eight">
 				<div class="meta-content">
-					<p>E: info@globalhealth.com | T: +01.415.206.4261</p>
+					<p class="cushycms">E: info@globalhealth.com | T: +01.415.206.4261</p>
 				</div>
 			</div>
 		</div>
@@ -43,8 +43,7 @@
 		<div class="header row">
 			<div class="five columns">
 				<div class="logo-container">
-					<img src="images/ghff_logo_black.png">
-				</div>
+					<img src="images/ghff_logo_black.png"></div>
 			</div>
 			<div class="seven columns">
 				<ul class="main-nav nav">
@@ -88,93 +87,102 @@
 				</div>
 				<div class="row">
 					<div class="twelve columns">
-						<p class="long-text pad">
-							The Global Health Film Festival is an attempt to bring neglected global health issues to light.  The films and organizations supporting the festival are dedicated to awareness, advocacy and activism to ensure that the below issues have platforms on the greater health agenda locally and globally:
-						</p>
+						<div class="cushycms" title="Why Description Top">
+							<p class="long-text pad">
+								The Global Health Film Festival is an attempt to bring neglected global health issues to light.  The films and organizations supporting the festival are dedicated to awareness, advocacy and activism to ensure that the below issues have platforms on the greater health agenda locally and globally:
+							</p>
+						</div>
 					</div>
 				</div>
 				<div class="row vert-pad">
 					<div class="twelve columns">
 						<p class="name">Safe, effective surgery globally</p>
-						<p class="long-text">
-							Did you know XX% of the world die or are disabled due to lack of access to surgery
-						</p>
+						<div class="cushycms" title="Fact 1 description">
+							<p class="long-text">
+								Did you know XX% of the world die or are disabled due to lack of access to surgery
+							</p>
+						</div>
 					</div>
 				</div>
 				<div class="row">
 					<div class="twelve columns">
 						<p class="name">Safe, clean and effective hospital systems</p>
-						<p class="long-text">
-							Did you know that in most developing countries the ratio of access to a functional hospital is XX per XX population, in comparison the hospital to population ration in San Francisco alone is XX per XX
-						</p>
+						<div class="cushycms" title="Fact 2 description">
+							<p class="long-text">
+								Did you know that in most developing countries the ratio of access to a functional hospital is XX per XX population, in comparison the hospital to population ration in San Francisco alone is XX per XX
+							</p>
+						</div>
 					</div>
 				</div>
 				<div class="row vert-pad">
 					<div class="twelve columns">
 						<p class="name">Access to rehabilitation and therapy</p>
-						<p class="long-text">
-							Did you know that XX% of amputees in developing countries have no access to wheelchairs, crutches or rehabilitation
-						</p>
+						<div class="cushycms" title="Fact 3 description">
+							<p class="long-text">
+								Did you know that XX% of amputees in developing countries have no access to wheelchairs, crutches or rehabilitation
+							</p>
+							<div class="cushycms" title="Fact 3 description"></div>
+						</div>
+						<div class="row">
+							<div class="twelve columns">
+								<p class="name">Public policy and resource allocation for surgical systems</p>
+								<div class="cushycms" title="Fact 4 description">
+									<p class="long-text">
+										Did you know that Road Traffic Accidents account for XX% of deaths and disability globally yet only XX countries have established road traffic laws and regulations
+									</p>
+								</div>
+							</div>
+						</div>
+						<div class="pad">
+						</div>
 					</div>
-				</div>
-				<div class="row">
-					<div class="twelve columns">
-						<p class="name">Public policy and resource allocation for surgical systems</p>
-						<p class="long-text">
-							Did you know that Road Traffic Accidents account for XX% of deaths and disability globally yet only XX countries have established road traffic laws and regulations
-						</p>
-					</div>
-				</div>
-				<div class="pad">
 				</div>
 			</div>
 		</div>
 
-		<div class="footer row">
-		<div class="four columns">
-			<p class="strong">Locate Us:</p>
-			<p>
-				IGOT Global Health Film Festival
-				<br>	
-				2550 23rd Street
-				<br>	
-				Building 9, 2nd Floor
-				<br>	
-				San Francisco, CA 94110
-			</p>
-		</div>
-		<div class="four columns">
-			<p class="strong">Show the love:</p>
-			<p>info@globalhealth.com</p>
-			<p>
-				<a href="https://www.facebook.com/pages/The-Right-To-Heal/133752193461055">RSVP to the event</a>
-			</p>
-			<p>
-				<a href="https://www.change.org/petitions/congress-the-house-of-representatives-provide-basic-cost-effective-surgical-care-to-people-in-developing-worlds?" target="_blank">Sign the petition</a>
-			</p>
-			<p>
-				<a href="https://docs.google.com/forms/d/12FSZOiDSsSCPTXuq11Jjxkp9dNozNjuwHWkG1YHQ5UY/viewform" target="_blank">Join our mailing list</a>
-			</p>
-			<p>
-				<a href="https://docs.google.com/forms/d/1S2gHF3fMmlGTIOgRogL9raWdZubqyUNSwYppbELZEA8/viewform" target="_blank">Volunteer</a>
-			</p>
+				<div class="footer row">
+					<div class="four columns">
+						<p class="strong">Locate Us:</p>
+						<p>
+							IGOT Global Health Film Festival
+							<br>
+							2550 23rd Street
+							<br>
+							Building 9, 2nd Floor
+							<br>San Francisco, CA 94110</p>
+					</div>
+					<div class="four columns">
+						<p class="strong">Show the love:</p>
+						<p>info@globalhealth.com</p>
+						<p>
+							<a href="https://www.facebook.com/pages/The-Right-To-Heal/133752193461055">RSVP to the event</a>
+						</p>
+						<p>
+							<a href="https://www.change.org/petitions/congress-the-house-of-representatives-provide-basic-cost-effective-surgical-care-to-people-in-developing-worlds?" target="_blank">Sign the petition</a>
+						</p>
+						<p>
+							<a href="https://docs.google.com/forms/d/12FSZOiDSsSCPTXuq11Jjxkp9dNozNjuwHWkG1YHQ5UY/viewform" target="_blank">Join our mailing list</a>
+						</p>
+						<p>
+							<a href="https://docs.google.com/forms/d/1S2gHF3fMmlGTIOgRogL9raWdZubqyUNSwYppbELZEA8/viewform" target="_blank">Volunteer</a>
+						</p>
 
-		</div>
-		<div class="four columns">
-			<p class="strong">Social Streams:</p>
-			<p>
-				<a href="https://www.facebook.com/pages/The-Right-To-Heal/133752193461055" target="_blank">Facebook</a>
-			</p>
-			<p>
-				<a href="https://twitter.com/therighttoheal" target="_blank">Twitter</a>
-			</p>
-			<p>
-				<a href="http://instagram.com/therighttoheal" target="_blank">Instagram</a>
-			</p>
-		</div>
-	</div>
-		<script src="javascripts/jquery.js"></script>
-		<script src="javascripts/foundation.min.js"></script>
-		<script src="javascripts/app.js"></script>
+					</div>
+					<div class="four columns">
+						<p class="strong">Social Streams:</p>
+						<p>
+							<a href="https://www.facebook.com/pages/The-Right-To-Heal/133752193461055" target="_blank">Facebook</a>
+						</p>
+						<p>
+							<a href="https://twitter.com/therighttoheal" target="_blank">Twitter</a>
+						</p>
+						<p>
+							<a href="http://instagram.com/therighttoheal" target="_blank">Instagram</a>
+						</p>
+					</div>
+				</div>
+				<script src="javascripts/jquery.js"></script>
+				<script src="javascripts/foundation.min.js"></script>
+				<script src="javascripts/app.js"></script>
 </body>
-	</html>
+			</html>
